Fix snackbar readability and move network error and login snackbar to the same "statusSnackbar"

--- a/src/styles/housestyle.scss
+++ b/src/styles/housestyle.scss
@@ -17,6 +17,12 @@ $accent: rgb(var(--v-theme-accent));
   background-color: #1E1E1E;
 }
 
+.v-snackbar__wrapper.v-theme--dark.v-snackbar--variant-elevated{
+  background-color: rgb(var(--v-theme-wallpaper));
+  outline: 1px $accent solid;
+  color: white;
+}
+
 .v-toolbar {
   transition: none;
 }
